fix(ui): avoid text wrapping on subsription-pro title

--- a/src/views/subscription-pro/SubscriptionPro.scss
+++ b/src/views/subscription-pro/SubscriptionPro.scss
@@ -4,6 +4,7 @@
   &__title {
     height: 32px;
     margin: 0;
+    white-space: nowrap;
   }
 
   &__content {
